@@ -1,3 +1,9 @@
+2008-01-04  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>
+
+	* aprx.c, aprsis.c, beacon.c:
+	    Complain loudly with -d or -v options on, and if the
+	    configuration does not set global  mycall  parameter.
+
 2007-12-29  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>
 
 	* version aprx-v0.12
